Feat (User): Adds mutations for users to create, update and delete. Also adds tests.